# filt

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  justfile  scratch.cpp
nb/: filtering-old.ipynb  filtering.1.ipynb  plane.ipynb  zxc.ipynb
src/: bench.cpp  filter.cpp  image.hpp  io.cpp  main.cpp  mempool.cpp  mempool.hpp  util.cpp  util.hpp
